--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "narrolog",
-  "version": "1.0.0",
+  "version": "1.1.3",
   "description": "a simple log tools based on nodejs.",
-  "main": "index.js",
+  "main": "./index.js",
   "dependencies": {
     "colors": "^1.1.2"
   },
